added participants array in briefs
